--- a/new/css/common.css
+++ b/new/css/common.css
@@ -441,123 +441,81 @@ a:link,a:visited,a:active{
 	bottom: 0;
 }*/
 
+/* 文章详细 */
+.mod_news_detail{border-top: 3px solid #ef3b42;}
+.mod_news_detail .title{font-size: 2.4em;text-align: center;margin: 30px auto 20px auto;}
+.mod_news_detail .time{font-size: 1.4em; color: #dddddd;text-align: center;display: block; padding:10px 0;border-bottom:1px dashed #f5f5f5; }
+.mod_news_detail .cover{}
+.mod_news_detail .txt{font-size: 1.4em;line-height: 1.8em;}
+.mod_news_detail .txt p{margin:10px auto; text-indent: 2em;}
+.mod_news_detail .txt ul{margin: 10px 0 10px 2em;}
+.mod_news_detail .txt li{list-style-type: decimal;}
+.mod_news_detail .txt img{}
+.mod_news_detail .txt b{font-weight:bold;}
+.mod_news_detail .txt i{font-style: italic;}
+
+/* 文章上下篇按钮 */
+.mod_article_btn{
+	overflow: hidden;
+	margin: 60px auto;
+}
+.mod_article_btn .btn_l,
+.mod_article_btn .btn_r{
+	display: block;	
+	position: relative;
+	padding: 4px 0;
+}
+.mod_article_btn .btn_l{
+	float: left;
+}
+.mod_article_btn .btn_r{
+	float: right;
+}
+
+.mod_article_btn .link{
+	color: #000;
+	padding: 10px 0;
+}
+.mod_article_btn .wire{
+	position: absolute;
+	background-color: #ed1c24;
+	height: 2px;
+	width: 100%;
+	display: block;
+	bottom: -2px;
+}
+
+.mod_article_btn .btn_l:hover .wire,
+.mod_article_btn .btn_r:hover .wire{
+	bottom: 0px;
+}
+
 
 /* 通用模块 */
 
 /* 广告 */
-.mod_ad{
-	text-align: center;
-	color: #fff;
-	font-weight: bold;
-	background-color: #ef3b42;
-	padding: 10px 0;
-	position: relative;
-}
+.mod_ad{ text-align: center; color: #fff; font-weight: bold; background-color: #ef3b42; padding: 10px 0; position: relative; }
 .mod_ad .title,
-.mod_ad .big_title{
-	font-weight: bold;
-	line-height: 1.8em;
-}
-.mod_ad .title{
-	font-size: 2.4em;
-}
-.mod_ad .big_title{
-	font-size: 5em;
-}
-
-.mod_ad .triangle_b{
-	height: 0;
-	width: 5;
-	border-width: 10px;
-	border-color: #ef3b42 transparent transparent transparent;
-	border-style: solid;
-	display: block;
-	bottom: -20px;
-	left: 50%;
-	position: absolute;
-}
+.mod_ad .big_title{ font-weight: bold; line-height: 1.8em; }
+.mod_ad .title{ font-size: 2.4em; }
+.mod_ad .big_title{ font-size: 5em; }
+.mod_ad .triangle_b{ height: 0; width: 5; border-width: 10px; border-color: #ef3b42 transparent transparent transparent; border-style: solid; display: block; bottom: -20px; left: 50%; position: absolute; }
 
 /* 按钮 */
-.mod_btn{
-	color: #fff;
-	background: #ed1c24;
-	border-radius: 4px;
-	padding: 10px 20px;
-	/*border-right:1px solid #ad0007;*/
-	/*border-bottom:2px solid #ad0007;*/
-	box-shadow:0px 2px 0px 0px  #ad0007;
-	display: block;
-	/*display: inlin-block;*/
-	display: inline-block;
-	+display: inline;
-	+zoom: 1;
-	text-align: center;
-}
-.mod_btn .mod_btn_title{
-	font-size: 1.4em;
-	line-height: 1em;
-}
-.mod_btn .mod_btn_ico{
-	font-size: 1.2em;
-	line-height: 1em;
-	display: inline-block;
-}
-
-.mod_btn:hover{
-	box-shadow:0px 2px 0px 0px transparent;
-	-webkit-transform:translate(0,2px);
-	-ms-transform:translate(0,2px);
-	-moz-transform:translate(0,2px);
-	-o-transform:translate(0,2px);
-	transform: translate(0,2px);
-}
-.mod_btn:active{
-	box-shadow: 0px -2px 0px 0px #ad0007;
-	-moz-transform:translate(0,4px);
-	-moz-transform:translate(0,4px);
-	-moz-transform:translate(0,4px);
-	-moz-transform:translate(0,4px);
-	transform: translate(0,4px);
-}
-.mod_btn:active .mod_btn_ico{
-	transform: translate(4px,0);
-	-webkit-transform: translate(4px,0);
-	-moz-transform: translate(4px,0);
-	-ms-transform: translate(4px,0);
-	-o-transform: translate(4px,0);
-}
+.mod_btn{ color: #fff; background: #ed1c24; border-radius: 4px; padding: 10px 20px; box-shadow:0px 2px 0px 0px  #ad0007; display: block; display: inline-block; +display: inline; +zoom: 1; text-align: center; }
+.mod_btn .mod_btn_title{ font-size: 1.4em; line-height: 1em; }
+.mod_btn .mod_btn_ico{ font-size: 1.2em; line-height: 1em; display: inline-block; }
+.mod_btn:hover{ box-shadow:0px 2px 0px 0px transparent; -webkit-transform:translate(0,2px); -ms-transform:translate(0,2px); -moz-transform:translate(0,2px); -o-transform:translate(0,2px); transform: translate(0,2px); }
+.mod_btn:active{ box-shadow: 0px -2px 0px 0px #ad0007; -moz-transform:translate(0,4px); -moz-transform:translate(0,4px); -moz-transform:translate(0,4px); -moz-transform:translate(0,4px); transform: translate(0,4px); }
+.mod_btn:active .mod_btn_ico{ transform: translate(4px,0); -webkit-transform: translate(4px,0); -moz-transform: translate(4px,0); -ms-transform: translate(4px,0); -o-transform: translate(4px,0); }
 
 
 /* 分页 */
-.mod_page{
-	margin: 20px 0; 
-}
-.mod_page .list{
-	display: inline-block;
-	+display: inline;
-	+zoom: 0;
-	margin: 0 4px;
-}
-.mod_page .list a{
-
-	font-size: 1.4em;
-	line-height: 1.4em;
-	color: #dddddd;
-	border-radius:4px;
-	border: 1px solid #dddddd;
-
-	display: block;
-	padding: 4px 8px;
-}
+.mod_page{ margin: 20px 0; }
+.mod_page .list{ display: inline-block; +display: inline; +zoom: 0; margin: 0 4px; }
+.mod_page .list a{ font-size: 1.4em; line-height: 1.4em; color: #dddddd; border-radius:4px; border: 1px solid #dddddd; display: block; padding: 4px 8px; }
 .mod_page .list a:hover,
-.mod_page .list .hover{
-	color: #fff;
-	background: #ef3b42;
-	border: 1px solid #ef3b42;
-}
-
-
-
+.mod_page .list .hover{ color: #fff; background: #ef3b42; border: 1px solid #ef3b42; }
 
 
 /* css3*/
@@ -580,7 +538,10 @@ a:link,a:visited,a:active{
 .mod_news_lists .list,
 .mod_news_lists .list .wire,
 .mod_news_lists .list .img_wrap,
-.mod_news_lists .list .img_wrap .img{
+.mod_news_lists .list .img_wrap .img,
+.mod_article_btn .btn_l,
+.mod_article_btn .btn_r,
+.mod_article_btn .wire{
 	-webkit-transition:all 0.4s ease-out;
 	-moz-transition:all 0.4s ease-out;
 	-ms-transition:all 0.4s ease-out;
