--- a/new/css/page.css
+++ b/new/css/page.css
@@ -1,120 +1,30 @@
 @charset "utf-8";
 
-.banner_index_wrap{
-	background: #fff;
-}
+.banner_index_wrap{ background: #fff; }
 
-.banner_index_wrap .list{
-	height: 520px;
-	padding: 0 0 0 4%;
-	/*width: 99%;*/
-	overflow: hidden;
-}
-.banner_index_wrap .list .title{
-	margin: 100px 0 10px 0;
-	font-size: 3.8em;
-}
-.banner_index_wrap .list .info{
-	font-size: 1.6em;
-	line-height: 1.8em;
-}
+.banner_index_wrap .list{ height: 520px; padding: 0 0 0 4%; overflow: hidden; }
+.banner_index_wrap .list .title{ margin: 100px 0 10px 0; font-size: 3.8em; }
+.banner_index_wrap .list .info{ font-size: 1.6em; line-height: 1.8em; }
+.banner_index_wrap .list_01{ background:#fff url(../images/banner/index/img_01.png) no-repeat right 0; }
 
-.banner_index_wrap .list_01{
-	background:#fff url(../images/banner/index/img_01.png) no-repeat right 0;
-}
-
-.banner_info_wrap{
-	background: #ef3b42;
-	height: 300px;
-	overflow: hidden;
-	text-align: center;
-}
-
-.banner_info_wrap .list{
-	color: #fff;
-	width: 33.33333333%;
-	height: 180px;
-	padding: 60px 0;
-	float: left;
-}
-.banner_info_wrap .list .ico{
-	font-size: 5em;
-	display: block;
-}
+.banner_info_wrap{ background: #ef3b42; height: 300px; overflow: hidden; text-align: center; }
+.banner_info_wrap .list{ color: #fff; width: 33.33333333%; height: 180px; padding: 60px 0; float: left; }
+.banner_info_wrap .list .ico{ font-size: 5em; display: block; }
 .banner_info_wrap .list .title,
-.banner_info_wrap .list .title_en{
-	font-size: 1.8em;
-	line-height: 1.8em;
-}
-.banner_info_wrap .list .title{
-	margin: 10px 0 0 0;
-}
-.banner_info_wrap .list .title_en{
+.banner_info_wrap .list .title_en{ font-size: 1.8em; line-height: 1.8em; }
+.banner_info_wrap .list .title{ margin: 10px 0 0 0; }
+.banner_info_wrap .list .title_en{ }
+.banner_info_wrap .list:hover{}
+.banner_info_wrap .list:hover .ico{ color: #7d0005; -webkit-transform:  rotate(360deg); -moz-transform:  rotate(360deg); -ms-transform:  rotate(360deg); -o-transform:  rotate(360deg); transform:  rotate(360deg); }
 
-}
-
-.banner_info_wrap .list:hover{
-	/*background-color: #d70009;*/
-	/*color: #7d0005;*/
-}
-.banner_info_wrap .list:hover .ico{
-	color: #7d0005;
-	-webkit-transform:  rotate(360deg);
-	-moz-transform:  rotate(360deg);
-	-ms-transform:  rotate(360deg);
-	-o-transform:  rotate(360deg);
-	transform:  rotate(360deg);
-}
-
-.cooperative_index{
-	margin: 20px auto;
-}
-.cooperative_index .wrap{
-	overflow: hidden;
-}
-.cooperative_index .wrap .list{
-	padding: 1px;
-	border: 2px solid #dddddd;
-	width: 160px;
-	height: 90px;
-	margin: 0 0 0 10px;
-	float: left;
-	/*background: url(../images/default_img.png) no-repeat center center;*/
-	background-size: cover;
-	text-align: center;
-	overflow: hidden;
-}
-
-.cooperative_index .wrap .list .img{
-	max-width: 160px;
-	max-height:90px; 
-}
-
-.cooperative_index .wrap .title{
-	background:none;
-	width:62px;
-	margin: 0;
-	padding:0;
-	border:0;
-	font-size: 1.5em;
-}
-
-
-.cooperative_index .wrap .list:hover{
-	border: 2px solid #d61119;
-}
-.cooperative_index .wrap .list:hover .img{
-	-webkit-transform:scale(1.04);
-	-moz-transform:scale(1.04);
-	-ms-transform:scale(1.04);
-	-o-transform:scale(1.04);
-	transform:scale(1.04);
-}
-
-.cooperative_index .wrap .title:hover{
-	border:none;
-}
-
+.cooperative_index{ margin: 20px auto; }
+.cooperative_index .wrap{ overflow: hidden; }
+.cooperative_index .wrap .list{ padding: 1px; border: 2px solid #dddddd; width: 160px; height: 90px; margin: 0 0 0 10px; float: left; background-size: cover; text-align: center; overflow: hidden; }
+.cooperative_index .wrap .list .img{ max-width: 160px; max-height:90px; }
+.cooperative_index .wrap .title{ background:none; width:62px; margin: 0; padding:0; border:0; font-size: 1.5em; }
+.cooperative_index .wrap .list:hover{ border: 2px solid #d61119; }
+.cooperative_index .wrap .list:hover .img{ -webkit-transform:scale(1.04); -moz-transform:scale(1.04); -ms-transform:scale(1.04); -o-transform:scale(1.04); transform:scale(1.04); }
+.cooperative_index .wrap .title:hover{ border:none; }
 
 
 /* 广告01 */
@@ -125,250 +35,66 @@
 
 /* 暂时使用图片 */
 /* benner_index_x */
-.benner_index_x{
-	text-align: center;
-	background: #fff;
-
-}
-
-.benner_index_x .img{
-	
-}
+.benner_index_x{ text-align: center; background: #fff; }
+.benner_index_x .img{ }
 
 /* index 关于我们 */
-.about_index{
-	padding: 40px 0;
-	overflow: hidden;
-}
+.about_index{ padding: 40px 0; overflow: hidden; }
 .about_index .photo,
-.about_index .info{
-	width: 50%;
-	float: left;
-}
+.about_index .info{ width: 50%; float: left; }
+.about_index .photo .img{ }
+.about_index .info{ }
+.about_index .info .title{ font-size: 3em; font-weight: bold; }
+.about_index .info .txt{ font-size: 1.4em; line-height: 1.8em; margin:20px 0; }
 
-.about_index .photo .img{
+/* index 新闻 */
+.news_index{ overflow: hidden; padding: 40px 0; }
+.news_index .wrap{ width: 45%; float: left; }
+.news_index .ml{ margin-left: 5%; }
+.news_index .mr{ margin-right:5%; }
 
-}
-.about_index .info{
+.news_index .wrap .mian_title{ font-size: 2em; line-height: 2em; border-bottom:2px solid #dddddd; font-weight: bold; color: #ed1c24; margin:0 0 20px 0; }
+.news_index .wrap .mian_title .more{ font-size: 0.7em; font-weight: 400; color:#d6d4d4; float: right; display: block; }
+.news_index .wrap .mian_title .more .ico{ vertical-align: middle; margin: 0 0 0 4px; display: inline-block; +display: inline; +zoom: 1; }
+.news_index .wrap .mian_title .more:hover{ color: #ed1c24; }
+.news_index .wrap .mian_title .more:hover .ico{ -webkit-transform:translate(2px,0px); -moz-transform:translate(2px,0px); -ms-transform:translate(2px,0px); -o-transform:translate(2px,0px); transform:translate(2px,0px); }
 
-}
-.about_index .info .title{
-	font-size: 3em;
-	font-weight: bold;
-	/*margin: 0 0 20px 0;*/
-}
-.about_index .info .txt{
-	font-size: 1.4em;
-	line-height: 1.8em;
-	margin:20px 0;
-}
-
-/* 新闻 首页 */
-.news_index{
-	overflow: hidden;
-	padding: 40px 0;
-}
-.news_index .wrap{
-	width: 45%;
-	float: left;
-}
-.news_index .ml{
-	margin-left: 5%;
-}
-.news_index .mr{
-	margin-right:5%;
-}
-.news_index .wrap .mian_title{
-	font-size: 2em;
-	line-height: 2em;
-	border-bottom:2px solid #dddddd;
-	font-weight: bold;
-	color: #ed1c24;
-	margin:0 0 20px 0;
-}
-.news_index .wrap .mian_title .more{
-	font-size: 0.7em;
-	font-weight: 400;
-	color:#d6d4d4;
-	float: right;
-	display: block;
-}
-.news_index .wrap .mian_title .more .ico{
-	vertical-align: middle;
-	margin: 0 0 0 4px;
-	display: inline-block;
-	+display: inline;
-	+zoom: 1;
-}
-.news_index .wrap .mian_title .more:hover{
-	color: #ed1c24;
-}
-.news_index .wrap .mian_title .more:hover .ico{
-	-webkit-transform:translate(2px,0px);
-	-moz-transform:translate(2px,0px);
-	-ms-transform:translate(2px,0px);
-	-o-transform:translate(2px,0px);
-	transform:translate(2px,0px);
-}
+.news_index .wrap .list_wrap{ }
+.news_index .wrap .list_wrap .list{ border-bottom: 1px dashed #dddddd; position: relative; cursor: pointer; }
+.news_index .wrap .list_wrap .list .title{ font-size: 1.4em; line-height: 3em; }
+.news_index .wrap .list_wrap .list .time{ float: right; color: #dddddd; }
+.news_index .wrap .list_wrap .list .wire{ background-color: #ed1c24; height: 0px; width: 100%; position: absolute; bottom: -2px; opacity: 0; filter:alpha(opacity=0); }
+.news_index .wrap .list_wrap .list:hover .wire{ bottom: -1px; height: 2px; opacity: 1; filter:alpha(opacity=100); }
 
 
-.news_index .wrap .list_wrap{
-
-}
-.news_index .wrap .list_wrap .list{
-	border-bottom: 1px dashed #dddddd;
-	position: relative;
-	cursor: pointer;
-	/*overflow: hidden;*/
-}
-.news_index .wrap .list_wrap .list .title{
-	font-size: 1.4em;
-	line-height: 3em;
-}
-.news_index .wrap .list_wrap .list .time{
-	float: right;
-	color: #dddddd;
-	/*display: block;*/
-}
-.news_index .wrap .list_wrap .list .wire{
-	background-color: #ed1c24;
-
-	height: 0px;
-	width: 100%;
-	
-	position: absolute;
-	bottom: -2px;
-	opacity: 0;
-	filter:alpha(opacity=0);
-
-}
-
-
-.news_index .wrap .list_wrap .list:hover .wire{
-	bottom: -1px;
-	height: 2px;
-	opacity: 1;
-	filter:alpha(opacity=100);
-}
-
-
-
-/* 公司信息 首页 */
-.contact_info_index{
-	/*padding: 20px 0;*/
-	margin: 20px auto;
-}
-.contact_info_index .wrap{
-	float: left;
-	width: 45%;
-}
-.contact_info_index .ml{
-	margin-left: 5%;
-}
-.contact_info_index .mr{
-	margin-right:5%;
-}
-
-
-.contact_info_index .form{
-	
-}
-.contact_info_index .form li{
-	margin: 10px 0;
-}
+/* index 公司信息 */
+.contact_info_index{margin: 20px auto;}
+.contact_info_index .wrap{ float: left; width: 45%; }
+.contact_info_index .ml{ margin-left: 5%; }
+.contact_info_index .mr{ margin-right:5%; }
+.contact_info_index .form{ }
+.contact_info_index .form li{ margin: 10px 0; }
 .contact_info_index .form li input,
-.contact_info_index .form .message{
-	height: 30px;
-	width: 96%;
-	padding: 4px 2%;
-	font-size: 1.4em;
-	line-height: 1.6em;
-	outline: none;
-	border: 2px solid #dddddd;
-	color: #dddddd;
-}
-.contact_info_index .form .title{
-	font-size: 2em;
-	margin: 0 0 20px 0;
-	/*line-height: 2em;*/
-}
-.contact_info_index .form .name{
-	
-}
-.contact_info_index .form .phone{
-	
-}
-.contact_info_index .form .size{
-	
-}
-.contact_info_index .form .message{
-	height: 90px;
-}
-.contact_info_index .form .btn_submit{
-	left: 0;
-	top: 0;
-	position: absolute;
-
-	border: none;
-	width: 100%;
-
-	visibility: hidden;
-}
-.contact_info_index .form .btn_submit_a{
-	/*width: 95%;*/
-	display: block;
-}
-
+.contact_info_index .form .message{ height: 30px; width: 96%; padding: 4px 2%; font-size: 1.4em; line-height: 1.6em; outline: none; border: 2px solid #dddddd; color: #dddddd; }
+.contact_info_index .form .title{ font-size: 2em; margin: 0 0 20px 0; }
+.contact_info_index .form .name{ }
+.contact_info_index .form .phone{ }
+.contact_info_index .form .size{ }
+.contact_info_index .form .message{ height: 90px; }
+.contact_info_index .form .btn_submit{ left: 0; top: 0; position: absolute; border: none; width: 100%; visibility: hidden; }
+.contact_info_index .form .btn_submit_a{ display: block; }
 .contact_info_index .form  input:focus,
-.contact_info_index .form  .message:focus{
-	outline: 2px solid #ed1c24;
-	/*border: 2px solid #ed1c24;*/
-	color: #000;
-}
-
+.contact_info_index .form  .message:focus{ outline: 2px solid #ed1c24; color: #000; }
 .contact_info_index .form  input:hover,
-.contact_info_index .form  .message:hover{
-	border: 2px solid #ed1c24;
-}
-
-.contact_info_index .form .phone_hot_wrap{
-	margin: 20px 0;
-}
-.contact_info_index .form .phone_hot_wrap .img_ico{
-	width: 80px;
-	height: 56px;
-	float: left;
-}
-.contact_info_index .form .phone_hot_wrap .sub_title{
-	font-size: 2em;
-	font-weight: bold;
-
-}
-.contact_info_index .form .phone_hot_wrap .phone_hot{
-	font-size: 2.4em;
-	color: #ed1c24;
-	font-weight: bold;
-}
-
-
-
-.contact_info_index .contact_info_map{
-	
-}
-.contact_info_index .contact_info_map p{
-	font-size: 1.6em;
-	margin: 0 0 10px 0;
-}
-.contact_info_index .contact_info_map .map{
-	/*width: ;*/
-	height: 330px;
-	border: 2px solid #dddddd;
-}
-.contact_info_index .contact_info_map .map:hover{
-	border: 2px solid #ed1c24;
-}
-
-
+.contact_info_index .form  .message:hover{ border: 2px solid #ed1c24; }
+.contact_info_index .form .phone_hot_wrap{ margin: 20px 0; }
+.contact_info_index .form .phone_hot_wrap .img_ico{ width: 80px; height: 56px; float: left; }
+.contact_info_index .form .phone_hot_wrap .sub_title{ font-size: 2em; font-weight: bold; }
+.contact_info_index .form .phone_hot_wrap .phone_hot{ font-size: 2.4em; color: #ed1c24; font-weight: bold; }
+.contact_info_index .contact_info_map{ }
+.contact_info_index .contact_info_map p{ font-size: 1.6em; margin: 0 0 10px 0; }
+.contact_info_index .contact_info_map .map{ height: 330px; border: 2px solid #dddddd; }
+.contact_info_index .contact_info_map .map:hover{ border: 2px solid #ed1c24; }
 
 /* 产品展示 */
 .product{
